// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

.emotion-7 {
  width: 400px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  width: 100%;
  max-height: 150px;
  overflow-y: scroll;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-6::-webkit-scrollbar {
  width: 5px;
}

.emotion-6::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-6::-webkit-scrollbar-thumb {
  background: #666;
}

.emotion-3 {
  font-size: 0.95em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 5px 10px;
  width: 100%;
  text-align: left;
  cursor: pointer;
  outline: none;
  background-color: white;
  border: none;
}

.emotion-3:hover {
  background-color: #d9dadd;
}

.emotion-3:focus {
  background-color: #d9dadd;
}

.emotion-3 .option-icon {
  padding-right: 5px;
}

<div
  className="emotion-7"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label="React Simple Dropdown"
    aria-labelledby={null}
    className="custom-class emotion-2"
    disabled={true}
    id="dropdown"
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Custom Placeholder...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-6"
  >
    <button
      aria-label="ariaLabel"
      className="className emotion-3"
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      1
    </button>
    <button
      aria-label="ariaLabel"
      className="className emotion-3"
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      2
    </button>
    <button
      aria-label="ariaLabel"
      className="className emotion-3"
      key="3"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      3
    </button>
  </ul>
</div>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-3 {
  width: 100%;
  max-height: 175px;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-3::-webkit-scrollbar {
  width: 5px;
}

.emotion-3::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-3::-webkit-scrollbar-thumb {
  background: #666;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

<div
  className="emotion-4"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="emotion-2"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Select ...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-3"
  />
</div>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
.emotion-28 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  font-size: 1em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: white;
  padding: 9px 5px;
  margin: 0px;
  border-radius: 0px;
  border-bottom: 2px solid #b5b6b7;
  border-top: none;
  border-right: none;
  border-left: none;
  text-align: left;
  cursor: pointer;
  outline: none;
}

.emotion-2:hover {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:focus {
  box-shadow: 0px 1px 3px 2px #d9dadd;
}

.emotion-2:disabled {
  cursor: not-allowed;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-right: 1px solid #b5b6b7;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #808080;
  text-align: left;
}

.emotion-27 {
  width: 100%;
  max-height: 175px;
  z-index: 9999;
  overflow-x: hidden;
  position: absolute;
  left: 0px;
  list-style-type: none;
  margin: 0px;
  padding: 2px 0;
  background-color: white;
  color: black;
  border-radius: 2px;
  display: none;
  box-sizing: border-box;
  top: 100%;
  box-shadow: 0px 3px 3px 2px #d9dadd;
}

.emotion-27::-webkit-scrollbar {
  width: 5px;
}

.emotion-27::-webkit-scrollbar-track {
  background: #ddd;
}

.emotion-27::-webkit-scrollbar-thumb {
  background: #666;
}

.emotion-1 {
  content: "";
  width: 0px;
  height: 0px;
  margin-left: 8px;
  margin-right: 5px;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  border-top: 5px solid #808080;
  border-bottom: 0px;
}

.emotion-4 {
  font-size: 0.95em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 5px 10px;
  width: 100%;
  text-align: left;
  cursor: pointer;
  outline: none;
  background-color: white;
  border: none;
}

.emotion-4:hover {
  background-color: #d9dadd;
}

.emotion-4:focus {
  background-color: #d9dadd;
}

.emotion-4 .option-icon {
  padding-right: 5px;
}

.emotion-14 {
  padding: 1em 0 0 0;
}

.emotion-3 {
  color: grey;
  font-size: 0.9em;
  padding: 0 10px 3px 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  className="emotion-28"
  onKeyDown={[Function]}
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="emotion-2"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    <div
      className="emotion-0"
    >
      Select ...
    </div>
    <div
      className="emotion-1"
    />
  </button>
  <ul
    className="emotion-27"
  >
    <div
      className="emotion-14"
      key="numbers"
    >
      <div
        className="emotion-3"
      >
        <div>
          NUMBERS
        </div>
        <div>
          10
        </div>
      </div>
      <button
        className="emotion-4"
        key="1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        1
      </button>
      <button
        className="emotion-4"
        key="2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        2
      </button>
      <button
        className="emotion-4"
        key="3"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        3
      </button>
      <button
        className="emotion-4"
        key="4"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        4
      </button>
      <button
        className="emotion-4"
        key="5"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        5
      </button>
      <button
        className="emotion-4"
        key="6"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        6
      </button>
      <button
        className="emotion-4"
        key="7"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        7
      </button>
      <button
        className="emotion-4"
        key="8"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        8
      </button>
      <button
        className="emotion-4"
        key="9"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        9
      </button>
      <button
        className="emotion-4"
        key="10"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        10
      </button>
    </div>
    <div
      className="emotion-14"
      key="letters"
    >
      <div
        className="emotion-3"
      >
        <div>
          LETTERS
        </div>
        <div>
          10
        </div>
      </div>
      <button
        className="emotion-4"
        key="a"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        a
      </button>
      <button
        className="emotion-4"
        key="b"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        b
      </button>
      <button
        className="emotion-4"
        key="c"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        c
      </button>
      <button
        className="emotion-4"
        key="d"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        d
      </button>
      <button
        className="emotion-4"
        key="e"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        e
      </button>
      <button
        className="emotion-4"
        key="f"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        f
      </button>
      <button
        className="emotion-4"
        key="g"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        g
      </button>
      <button
        className="emotion-4"
        key="h"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        h
      </button>
      <button
        className="emotion-4"
        key="i"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        i
      </button>
      <button
        className="emotion-4"
        key="j"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="-1"
        type="button"
      >
        j
      </button>
    </div>
  </ul>
</div>
`;
